# subtitle-downloader

./: .gitignore  LICENSE  README.md  equirements-dev.txt  pyproject.toml  requirements-gtk.txt  requirements-qt.txt  requirements.txt  setup.py
.github/workflows/: python-test.yml
docs/: DEVELOPER.md  INSTALL.md  USAGE.md
scripts/: configure.sh  install.sh  uninstall.sh
share/file-manager/actions/: download-subtitle.desktop
share/file-manager/scripts/: download-subtitle.py
share/file-manager/servicemenus/: download-subtitle.desktop
src/subtitle_downloader/: __init__.py  __main__.py  config.py  core.py  file_managers.py  gui_gtk.py  utils.py
tests/: __init__.py  test_config.py  test_core.py  test_utils.py
